# api/docs/swagger.json
@@ -884,7 +884,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.ContractRegistrationExample"
+                            "$ref": "#/definitions/models.ContractRegistrationRequest"
                         }
                     }
                 ],
@@ -1304,20 +1304,23 @@
         }
     },
     "definitions": {
-        "models.ContractRegistrationExample": {
+        "models.ContractRegistrationRequest": {
             "type": "object",
+            "required": [
+                "dataContrato",
+                "numeroContrato",
+                "regConId",
+                "vehicleData"
+            ],
             "properties": {
                 "dataContrato": {
-                    "type": "string",
-                    "example": "2024-01-15"
+                    "type": "string"
                 },
                 "numeroContrato": {
-                    "type": "string",
-                    "example": "668"
+                    "type": "string"
                 },
                 "regConId": {
-                    "type": "string",
-                    "example": "b8d899ac-4a02-4e2d-a3d5-cada74d30927"
+                    "type": "string"
                 },
                 "vehicleData": {
                     "$ref": "#/definitions/models.VehicleData"
